# pythondaq

./: Bestandje.csv  None.csv  arduino_device.py  basisscript.py  diode_experiment.py  metingen.csv  pyproject.toml  pythondaqMVC.bundle  pythondaqPoetry.bundle  spanning meten.py  view.py
src/pythondaq/: arduino_device.py  cli.py  diode_experiment.py  gui.py  view.py
