[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["Sep-Binkhorst <sepbinkhorst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
view = "pythondaq.view:main"
