[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["Sep-Binkhorst <sepbinkhorst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
click = "^8.1.7"
pyvisa-py = "^0.7.2"
zeroconf = "^0.136.0"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diode = "pythondaq.cli:cmd_group"
